# kisa-vuln-checker

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/: __init__.py  __main__.py  export.py  exporter.py  models.py  parser.py
tests/: test_exporter.py  test_parser.py
webapp/: .env.example  INSTALL.md  README.md  docker-build.bat  docker-compose.yml
webapp/agents/: check-unix.sh  check-windows.ps1
webapp/backend/: .env.example  Dockerfile  requirements.txt  seed_checklist.json
webapp/backend/app/: __init__.py  main.py
webapp/backend/app/api/: __init__.py  agent.py  assessments.py  assets.py  auth.py  checklist.py  convert.py  downloads.py  exceptions.py  reports.py  users.py
webapp/backend/app/core/: config.py  database.py  security.py
webapp/backend/app/models/: __init__.py  assessment.py  asset.py  checklist.py  exception.py  user.py
webapp/backend/app/schemas/: __init__.py  assessment.py  asset.py  auth.py  checklist.py  exception.py  report.py  user.py
webapp/backend/app/services/: pdf_generator.py  remediation.py
webapp/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
webapp/frontend/src/: App.tsx  index.css
webapp/frontend/src/components/: Layout.tsx  Modal.tsx  StatusBadge.tsx
webapp/frontend/src/hooks/: useAuth.ts
webapp/frontend/src/pages/: AgentsPage.tsx  AssetDetailPage.tsx  AssetsPage.tsx  ChecklistPage.tsx  ConvertPage.tsx  DashboardPage.tsx  ExceptionsPage.tsx  LoginPage.tsx  ReportsPage.tsx  UploadPage.tsx  UsersPage.tsx
webapp/frontend/src/services/: api.ts
(+1 files in other folders)
